# trip-eld

trip-eld-frontend/: .gitignore  bun.lockb  index.html  package.json
trip-eld-frontend/src/: App.tsx  FullscreenToggle.css  main.tsx
trip-eld-frontend/src/assets/: sampleData.json
trip-eld-frontend/src/components/: ELDLogSheets.tsx  FilterChip.tsx  FullscreenHandler.tsx  FullscreenToggle.tsx  LocationSearchInput.tsx  MapFullscreen.tsx  RouteAndSummary.tsx  TripInputForm.tsx  ui-helpers.tsx
trip-eld-frontend/src/hooks/: useFullscreen.ts
trip-eld-frontend/src/lib/: sample-data.ts  types.ts  utils.ts
trip_eld_backend/: .gitignore  main.py  manage.py  pyproject.toml  requirements.txt
trip_eld_backend/core/: serializers.py  tests.py  transformer.py  urls.py  utils.py  views.py
trip_eld_backend/trip_eld_backend/: asgi.py  settings.py  urls.py  wsgi.py
